<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_nav_item_history"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_bottom_nav_item_history_selected"
        android:title="@string/bottom_nav_history" />
    <item
        android:id="@+id/bottom_nav_item_calendar"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_bottom_nav_item_calendar_not_selected"
        android:title="@string/bottom_nav_calendar" />
    <item
        android:id="@+id/bottom_nav_item_statistics"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_bottom_nav_item_statistics_not_selected"
        android:title="@string/bottom_nav_statistics" />
    <item
        android:id="@+id/bottom_nav_item_setting"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_bottom_nav_item_setting_not_selected"
        android:title="@string/bottom_nav_setting" />
</menu>