<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mvm"
            type="com.example.accountbook.presentation.viewmodel.MainViewModel" />
        <variable
            name="viewModel"
            type="com.example.accountbook.presentation.viewmodel.HistoryDetailViewModel" />
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary_off_white_100"
        tools:context=".presentation.history.HistoryDetailFragment">

        <include
            android:id="@+id/history_detail_app_bar"
            layout="@layout/app_bar_layout"
            app:viewModel="@{mvm}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/history_detail_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/app_base_space_16"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_detail_app_bar">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/history_detail_income_btn"
                style="@style/Widget.TextView.KopubWorldDotumPro12_White100_Medium.TextAppearance"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_income_selector"
                android:button="@null"
                android:checked="@{!viewModel.isExpenseChecked()}"
                android:gravity="center"
                android:text="@string/income_text" />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/history_detail_expense_btn"
                style="@style/Widget.TextView.KopubWorldDotumPro12_White100_Medium.TextAppearance"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_expense_selector"
                android:button="@null"
                android:checked="@{viewModel.isExpenseChecked()}"
                android:onCheckedChanged="@{() -> viewModel.checkedChanged()}"
                android:gravity="center"
                android:text="@string/expense_text" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/history_detail_date_hardcode_tv"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Medium.Style"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/recycler_item_space_24"
                android:text="@string/history_detail_date" />
            <TextView
                android:id="@+id/history_detail_date_tv"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Bold.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/recycler_item_space_24"
                year="@{viewModel.bottomSheetSelectedYear}"
                month="@{viewModel.bottomSheetSelectedMonth}"
                day="@{viewModel.bottomSheetSelectedDay}"/>
        </LinearLayout>

        <View
            android:id="@+id/history_detail_date_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginTop="@dimen/recycler_item_space_8"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:background="@color/primary_purple_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/history_detail_price_hardcode_tv"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Medium.Style"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:text="@string/history_detail_price" />
            <EditText
                android:id="@+id/history_detail_price_et"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Bold.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:background="@null"
                android:ems="1"
                android:hint="@string/edit_text_hint_input"
                android:inputType="number"
                android:maxLength="20"
                android:text="@{viewModel.inputPrice}"
                android:textColor="@color/primary_purple_100"
                android:textColorHint="@color/primary_light_purple_100"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <View
            android:id="@+id/history_detail_price_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginTop="@dimen/recycler_item_space_8"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:background="@color/primary_purple_40" />

        <LinearLayout
            android:id="@+id/history_detail_payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:visibility="@{viewModel.isExpenseChecked()?View.VISIBLE:View.GONE}"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/history_detail_payment_hardcode_tv"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Medium.Style"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:text="@string/history_detail_payment" />
            <com.example.accountbook.presentation.CustomSpinner
                android:id="@+id/history_detail_payment_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:selectedItemPosition="@{viewModel.paymentSelectedPos}"
                android:background="@drawable/spinner_arrow_down_background"
                android:popupBackground="@drawable/spinner_list_background"
                android:popupElevation="0dp" />
        </LinearLayout>

        <View
            android:id="@+id/history_detail_payment_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginTop="@dimen/recycler_item_space_8"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:visibility="@{viewModel.isExpenseChecked()?View.VISIBLE:View.GONE}"
            android:background="@color/primary_purple_40" />

        <LinearLayout
            android:id="@+id/history_detail_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/history_detail_category_hardcode_tv"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Medium.Style"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:text="@string/history_detail_category" />
            <com.example.accountbook.presentation.CustomSpinner
                android:id="@+id/history_detail_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:selectedItemPosition="@{viewModel.isExpenseChecked()?viewModel.expenseCategorySelectedPos:viewModel.incomeCategorySelectedPos}"
                android:background="@drawable/spinner_arrow_down_background"
                android:popupBackground="@drawable/spinner_list_background"
                android:popupElevation="0dp" />
        </LinearLayout>

        <View
            android:id="@+id/history_detail_category_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginTop="@dimen/recycler_item_space_8"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:background="@color/primary_purple_40" />

        <LinearLayout
            android:id="@+id/history_detail_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/history_detail_description_hardcode_tv"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Medium.Style"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:text="@string/history_detail_description" />
            <EditText
                android:id="@+id/history_detail_description_et"
                style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Bold.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_base_space_16"
                android:background="@null"
                android:ems="1"
                android:hint="@string/edit_text_hint_input"
                android:text="@{viewModel.inputDescription}"
                android:inputType="text"
                android:maxLength="20"
                android:textColor="@color/primary_purple_100"
                android:textColorHint="@color/primary_light_purple_100"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <View
            android:id="@+id/history_detail_description_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/app_base_space_16"
            android:layout_marginTop="@dimen/recycler_item_space_8"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:background="@color/primary_purple_40" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/history_detail_add_btn"
                style="@style/Widget.TextView.KopubWorldDotumPro14_White100_Bold.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/app_base_space_16"
                android:layout_marginEnd="@dimen/app_base_space_16"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background_opacity50_radius_14"
                android:enabled="@{viewModel.isButtonEnabled()}"
                android:stateListAnimator="@null"
                android:text="@{viewModel.isUpdateMode()? @string/button_save : @string/button_add}"
                app:changeButtonBackground="@{viewModel.isButtonEnabled()}" />
        </RelativeLayout>

    </LinearLayout>
</layout>