<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.accountbook.presentation.viewmodel.SettingViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.setting.SettingDetailFragment"
        android:background="@color/primary_off_white_100">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/setting_detail_app_bar_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/primary_off_white_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/setting_detail_tool_bar_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp">

                <ImageView
                    android:id="@+id/setting_detail_app_bar_back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/app_base_space_16"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_app_bar_left" />

                <TextView
                    android:id="@+id/setting_detail_app_bar_title_tv"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{viewModel.appBarTitle}"
                    android:gravity="center"
                    style="@style/Widget.TextView.KopubWorldDotumPro18_Purple100_Medium.Style" />
            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_purple_100" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/setting_detail_name_hardcode_tv"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/setting_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/setting_detail_app_bar_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/recycler_item_space_24"
            android:layout_marginStart="@dimen/app_base_space_16"
            style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Bold.Style"/>

        <EditText
            android:id="@+id/setting_detail_name_et"
            style="@style/Widget.TextView.KopubWorldDotumPro14_Purple100_Bold.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="1"
            android:hint="@string/edit_text_hint_input"
            android:inputType="text"
            android:maxLength="5"
            android:text="@{viewModel.inputName}"
            app:layout_constraintTop_toTopOf="@+id/setting_detail_name_hardcode_tv"
            app:layout_constraintBottom_toBottomOf="@+id/setting_detail_name_hardcode_tv"
            app:layout_constraintStart_toEndOf="@+id/setting_detail_name_hardcode_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/app_base_space_16"
            android:textColor="@color/primary_purple_100"
            android:textColorHint="@color/primary_light_purple_100"
            android:textCursorDrawable="@null" />

        <View
            android:id="@+id/setting_detail_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="@+id/setting_detail_name_hardcode_tv"
            app:layout_constraintEnd_toEndOf="@+id/setting_detail_name_et"
            app:layout_constraintTop_toBottomOf="@+id/setting_detail_name_et"
            android:layout_marginTop="@dimen/recycler_item_space_8"
            android:background="@color/primary_purple_40"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setting_detail_color_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recycler_item_space_24"
            app:layout_constraintTop_toBottomOf="@+id/setting_detail_view"
            android:visibility="@{viewModel.isPaymentMode()?View.GONE:View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/primary_off_white_100"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/setting_detail_color_hardcode_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_detail_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/app_base_space_16"
                android:layout_marginEnd="@dimen/app_base_space_16"
                style="@style/Widget.TextView.KopubWorldDotumPro16_Light_Purple100_Medium.Style"/>

            <View
                android:id="@+id/setting_detail_color_view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/primary_purple_40"
                app:layout_constraintStart_toStartOf="@+id/setting_detail_color_hardcode_tv"
                app:layout_constraintEnd_toEndOf="@+id/setting_detail_color_hardcode_tv"
                app:layout_constraintTop_toBottomOf="@+id/setting_detail_color_hardcode_tv"
                android:layout_marginTop="@dimen/recycler_item_space_8"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/setting_detail_color_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/setting_detail_color_view"
                app:layout_constraintEnd_toEndOf="@+id/setting_detail_color_view"
                app:layout_constraintTop_toBottomOf="@+id/setting_detail_color_view"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="10"/>

            <View
                android:id="@+id/setting_detail_rv_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="11dp"
                app:layout_constraintTop_toBottomOf="@+id/setting_detail_color_rv"
                android:background="@color/primary_light_purple_100"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setting_detail_add_btn"
            style="@style/Widget.TextView.KopubWorldDotumPro14_White100_Bold.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="@+id/setting_detail_view"
            app:layout_constraintEnd_toEndOf="@+id/setting_detail_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_background_opacity50_radius_14"
            android:enabled="@{viewModel.isButtonEnabled()}"
            android:stateListAnimator="@null"
            android:text="@{viewModel.isUpdateMode()? @string/button_edit : @string/button_add}"
            app:changeButtonBackground="@{viewModel.isButtonEnabled()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>